# book-club

./: README.md  app.py  decryptTemplate.html  encrypt_flask_template.py  freeze.py  pyproject.toml  read_data.py  requirements.txt
.github/workflows/: app.yml
book_club/: app.py  encrypt_flask_template.py  freeze.py  read_data.py
book_club/static/data/: Berlin Beer & Book Club.csv
book_club/static/style/: additions.css
book_club/templates/: base_book_club.html  book_club.html  book_club_about.html  book_club_wrapped.html
encrypt/book_club_wrapped/beth/: index.html
encrypt/book_club_wrapped/helen/: index-protected.html  index.html
encrypt/book_club_wrapped/max/: index-protected.html  index.html
static/: wrapped.css
static/data/: Berlin Beer & Book Club.csv  book_data.csv
static/scripts/: october_challenge.js  read_google_sheet_data.js
static/style/: additions.css  main.css  october_challenge.css  wrapped.css
templates/: base_book_club.html  book_club.html  book_club_index.html  book_club_wrapped.html  decryptTemplate.html  helen_pw_protected.html  october_challenge.html
