[project]
name = "hfa-personal-site"
version = "0.1"
description = "Helen's personal static site"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = "~=3.9"
readme = "README.md"
dependencies = [
    "flask>=3.0.0,<4",
    "requests>=2.32.3,<3",
    "frozen-flask>=1.0.2,<2",
    "pycryptodome>=3.20.0,<4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
