[project]
name = "book-club"
version = "0.1"
description = "Site for Berlin Beer and Book Club"
authors = [{ name = "Helen Adams", email = "helenffionadams@gmail.com" }]
requires-python = "~=3.9"
readme = "README.md"
dependencies = [
    "flask>=3.0.0,<4",
    "requests>=2.32.3,<3",
    "frozen-flask>=1.0.2,<2",
    "pycryptodome>=3.20.0,<4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
package-mode = false